Not done merge with thanh-Manager